# 3d-car-customizer

./: .gitignore  Dockerfile  PHASE2_MANUAL_CORRECTION.md  README.md  TRANSFORM_CONTROLS_TEST_GUIDE.md  architecture.mmd  pyproject.toml  test.db  test_frontend_checkbox.md  test_transform_controls.md
app/: auth.py  config.py  db.py  main.py  models.py
app/routers/: carmodels.py  parts.py  protected.py  users.py
backend/: add_sample_data.py  add_sample_parts.py  check_anchors.py  check_db.py  check_ingested.py  check_porsche_database.py  check_porsche_url.py  clean_irrelevant_parts.py  create_test_fitments.py  debug_download.py  debug_licenses.py  fix_all_urls.py  link_parts_to_cars.py  migrate_to_anchor_system.py  pyproject.toml  requirements.txt  reset_db.py  test_api.py  test_download.py  test_ingestion.py  test_part_ingestion.py  test_phase2.py  test_phase2_complete.py  test_sketchfab.py  update_car_url.py  update_glb_urls.py  update_part_positions.py  update_parts.py  update_placeholder_parts.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/routers/: carmodels.py  fitments.py  items.py  parts.py  saved_cars.py  users.py
backend/app/services/: __init__.py  auto_placement_service.py  ingestion_service.py  part_ingestion_service.py  part_service.py  (+2 more)
backend/scripts/: process_gltf.py
car-customization-app/: middleware.ts  package-lock.json  package.json  test-frontend.md  test-transform-controls.html
car-customization-app/app/: globals.css  layout.tsx  page.tsx
car-customization-app/components/: CarViewer.tsx  ManualCorrectionControls.tsx  PartDetails.tsx  PartsSelector.tsx  Simple3D.tsx  Test3D.tsx  car-viewer-3d.tsx
car-customization-app/contexts/: AuthContext.tsx
car-customization-app/hooks/: useAuth.tsx
car-customization-app/lib/: api.ts
(+11 files in other folders)
